<resources>
    <string name="app_name">SimpleStoreManager</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="products_menu">Products</string>
    <string name="clients_menu">Clients</string>
    <string name="settings_menu">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_product">Adicionar Produto</string>
    <string name="insert_product_name">Product Name</string>
    <string name="exemple_product_name">exp.(bricks)</string>
    <string name="product_quant">Amount</string>
    <string name="exemple_product_amount">exp.(500)</string>
    <string name="product_price">Price</string>
    <string name="exemple_product_price">exp(337,00)</string>
    <string name="save_product">Save</string>
    <string name="cancel_save_product">Cancel</string>
    <string name="add_product_toolbar_title">Add Product</string>
    <string name="saved">Saved !</string>


</resources>
